--- a/src/CrearEspacio/EspaciosDisponiblesCrear.module.css
+++ b/src/CrearEspacio/EspaciosDisponiblesCrear.module.css
@@ -49,6 +49,9 @@
   padding: 2.5rem 8rem;
   margin: 0 auto;
   max-width: 1500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
 }
 
 .sectionTitle {
@@ -56,6 +59,8 @@
   font-size: 1.25rem;
   line-height: 1.75rem;
   color: #000000;
+  text-align: center; 
+  width: 100%; 
 }
 
 .imageUploadSection {
