--- a/src/Editarperfil/EditarPerfilDeUsuario.css
+++ b/src/Editarperfil/EditarPerfilDeUsuario.css
@@ -1,374 +1,491 @@
-.editar-perfil-container {
-  position: relative;
-  width: 100%;
-  min-height: 100vh;
-  background-color: #f5f5f5;
-}
+/* Import fonts */
+@import url("https://fonts.googleapis.com/css?family=Hammersmith+One:400|Roboto:400,700,600|Inter:400,700");
 
-.header {
-  display: flex;
-  position: relative;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 2.75rem;
-  width: 100%;
-  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background-color: #f5f5f5;
-  height: 166px;
-}
-
-.header-logo {
-  margin-top: 0;
-  height: 177px;
-  width: 177px;
-}
-
-.header-icons {
-  display: flex;
-  gap: 1rem;
-  align-items: center;
-  margin-top: 0.625rem;
-}
-
-.main-content {
-  display: flex;
-  position: relative;
-  margin: 0 auto;
-  width: 100%;
-  max-width: 1500px;
-  min-height: calc(100vh - 375px);
-}
-
-.form-section {
-  position: relative;
-  flex: 1;
-  padding: 3rem 8rem 0 8rem;
-}
-
-.page-title {
-  margin-bottom: 5rem;
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-  color: #0f172a;
-}
-
-.form-container {
-  position: relative;
-  width: 965px;
-}
-
-.form-row {
-  display: flex;
-  gap: 2.75rem;
-  margin-bottom: 3.5rem;
-}
-
-.form-field {
-  position: relative;
-  flex: 1;
-}
-
-.field-label {
-  margin-bottom: 0.5rem;
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-  font-weight: 600;
-  color: #0f172a;
-}
-
-.input-container {
-  position: relative;
-}
-
-.form-input {
+/* Reset styles */
+* {
+  -webkit-font-smoothing: antialiased;
   box-sizing: border-box;
-  padding: 0 1.25rem;
+}
+
+html,
+body {
+  margin: 0px;
+  height: 100%;
+}
+
+/* Variables */
+:root {
+  --shape-corner-full: 1000px;
+}
+
+/* Main container */
+.editar-perfil-de {
+  background-color: #f5f5f5;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   width: 100%;
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-  background-color: white;
-  border-radius: 1.5rem;
-  border: none;
-  height: 57px;
-  color: #d4d4d4;
 }
 
-.form-input:focus {
-  outline: none;
-  color: #000;
+.editar-perfil-de .overlap-wrapper {
+  background-color: #f5f5f5;
+  height: 1089px;
+  overflow: hidden;
+  width: 1500px;
 }
 
-.eye-icon {
-  position: absolute;
-  right: 18px;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 27px;
-  height: 19px;
-  cursor: pointer;
-}
-
-.save-button-container {
-  display: flex;
-  justify-content: center;
-  margin: 6rem 0 4rem 0;
-}
-
-.save-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #ea580c;
-  cursor: pointer;
-  border: none;
-  height: 60px;
-  border-radius: 1000px;
-  width: 326px;
-}
-
-.save-button-text {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-  font-weight: 700;
-  color: white;
-}
-
-.back-link {
-  display: flex;
-  gap: 0.75rem;
-  align-items: center;
-  cursor: pointer;
-}
-
-.back-text {
-  font-size: 1rem;
-  line-height: 1.5rem;
-  font-weight: 700;
-  color: black;
-}
-
-.sidebar {
+.editar-perfil-de .overlap {
+  height: 1135px;
+  left: -1px;
   position: relative;
-  margin-top: 9rem;
+  width: 1501px;
+}
+
+/* Page title */
+.editar-perfil-de .text-wrapper {
+  color: #030027;
+  font-family: "Hammersmith One", Helvetica;
+  font-size: 38px;
+  font-weight: 400;
+  left: 129px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 209px;
+}
+
+.editar-perfil-de .overlap-group {
+  height: 1135px;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 1501px;
+}
+
+/* Header group */
+.editar-perfil-de .group {
+  background-color: #f4f4f4;
+  height: 144px;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 1500px;
+}
+
+.editar-perfil-de .frame {
+  height: 47px;
+  left: 1354px;
+  position: absolute;
+  top: 48px;
+  width: 47px;
+}
+
+.editar-perfil-de .image {
+  height: 142px;
+  left: 45px;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  width: 142px;
+}
+
+.editar-perfil-de .menu {
+  height: 53px;
+  left: 1411px;
+  position: absolute;
+  top: 45px;
+  width: 46px;
+}
+
+/* Background with dot pattern */
+.editar-perfil-de .background {
   height: 993px;
+  left: 1046px;
+  position: absolute;
+  top: 142px;
   width: 404px;
 }
 
-.sidebar-plate {
-  position: absolute;
-  top: 0;
+.editar-perfil-de .div {
+  height: 993px;
+  position: relative;
+}
+
+.editar-perfil-de .plate {
+  background: linear-gradient(
+    180deg,
+    rgba(238, 93, 8, 1) 0%,
+    rgba(240, 243, 255, 0) 100%
+  );
   height: 993px;
   left: 22px;
+  position: absolute;
+  top: 0;
   width: 359px;
 }
 
-.dot-pattern-container {
-  display: flex;
-  overflow: hidden;
-  position: absolute;
-  left: 0;
-  justify-content: center;
-  align-items: center;
+.editar-perfil-de .shared-dot-pattern {
   height: 326px;
+  left: 0;
+  position: absolute;
   top: 76px;
   width: 404px;
 }
 
-.dot-pattern-grid {
-  display: flex;
+/* Form fields group */
+.editar-perfil-de .group-2 {
+  height: 315px;
+  left: 129px;
   position: absolute;
-  gap: 1rem;
-  align-items: flex-start;
-  height: 1244px;
-  left: -420px;
-  top: -420px;
-  width: 1244px;
+  top: 293px;
+  width: 989px;
 }
 
-.dot-pattern-column {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  align-items: flex-start;
-}
-
-.pattern-image {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 404px;
-  width: 404px;
-}
-
-.profile-section {
-  display: flex;
+/* Name field */
+.editar-perfil-de .div-wrapper {
+  background-color: #ffffff;
+  border-radius: 24px;
+  height: 57px;
+  left: 0;
   position: absolute;
-  flex-direction: column;
-  align-items: center;
-  left: 95px;
-  top: 174px;
+  top: 30px;
+  width: 460px;
 }
 
-.profile-text {
-  margin-top: 15rem;
-  font-size: 1.25rem;
-  line-height: 1.75rem;
+.editar-perfil-de .text-wrapper-2 {
+  color: #d1d1d1;
+  font-family: "Roboto", Helvetica;
+  font-size: 20px;
+  font-weight: 400;
+  left: 18px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 17px;
+  white-space: nowrap;
+}
+
+.editar-perfil-de .text-wrapper-3 {
+  color: #030027;
+  font-family: "Roboto", Helvetica;
+  font-size: 20px;
   font-weight: 600;
-  text-align: center;
-  color: #0f172a;
-  width: 184px;
-}
-
-.footer {
-  position: relative;
-  margin-top: auto;
-  width: 100%;
-  height: 209px;
-}
-
-.footer-text {
+  left: 11px;
+  letter-spacing: 0;
+  line-height: normal;
   position: absolute;
-  left: 50%;
-  font-size: 1.25rem;
-  line-height: 1.75rem;
+  top: 0;
+  white-space: nowrap;
+}
+
+/* Last name field */
+.editar-perfil-de .overlap-2 {
+  background-color: #ffffff;
+  border-radius: 24px;
+  height: 57px;
+  left: 0;
+  position: absolute;
+  top: 143px;
+  width: 460px;
+}
+
+.editar-perfil-de .text-wrapper-6 {
+  color: #030027;
+  font-family: "Roboto", Helvetica;
+  font-size: 20px;
+  font-weight: 600;
+  left: 11px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 111px;
+  white-space: nowrap;
+}
+
+/* Career field */
+.editar-perfil-de .overlap-3 {
+  background-color: #ffffff;
+  border-radius: 24px;
+  height: 57px;
+  left: 0;
+  position: absolute;
+  top: 258px;
+  width: 460px;
+}
+
+.editar-perfil-de .text-wrapper-7 {
+  color: #030027;
+  font-family: "Roboto", Helvetica;
+  font-size: 20px;
+  font-weight: 600;
+  left: 11px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 228px;
+  white-space: nowrap;
+}
+
+/* Phone field */
+.editar-perfil-de .overlap-4 {
+  background-color: #ffffff;
+  border-radius: 24px;
+  height: 57px;
+  left: 505px;
+  position: absolute;
+  top: 258px;
+  width: 460px;
+}
+
+.editar-perfil-de .text-wrapper-4 {
+  color: #d1d1d1;
+  font-family: "Roboto", Helvetica;
+  font-size: 20px;
+  font-weight: 400;
+  left: 16px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 17px;
+  white-space: nowrap;
+}
+
+.editar-perfil-de .text-wrapper-5 {
+  color: #030027;
+  font-family: "Roboto", Helvetica;
+  font-size: 20px;
+  font-weight: 600;
+  left: 514px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 227px;
+  white-space: nowrap;
+}
+
+/* Password field */
+.editar-perfil-de .overlap-5 {
+  background-color: #ffffff;
+  border-radius: 24px;
+  height: 57px;
+  left: 505px;
+  position: absolute;
+  top: 30px;
+  width: 460px;
+}
+
+.editar-perfil-de .vector {
+  height: 19px;
+  left: 398px;
+  position: absolute;
+  top: 20px;
+  width: 27px;
+}
+
+.editar-perfil-de .text-wrapper-8 {
+  color: #030027;
+  font-family: "Roboto", Helvetica;
+  font-size: 20px;
+  font-weight: 600;
+  left: 505px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 0;
+  white-space: nowrap;
+}
+
+/* Confirm password field */
+.editar-perfil-de .overlap-6 {
+  background-color: #ffffff;
+  border-radius: 24px;
+  height: 57px;
+  left: 505px;
+  position: absolute;
+  top: 143px;
+  width: 460px;
+}
+
+.editar-perfil-de .text-wrapper-9 {
+  color: #030027;
+  font-family: "Roboto", Helvetica;
+  font-size: 20px;
+  font-weight: 600;
+  left: 505px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 113px;
+  white-space: nowrap;
+}
+
+/* Profile picture section */
+.editar-perfil-de .ellipse {
+  background-color: #ffffff;
+  border-radius: 106.5px;
+  height: 213px;
+  left: 1141px;
+  position: absolute;
+  top: 316px;
+  width: 213px;
+}
+
+.editar-perfil-de .img {
+  height: 161px;
+  left: 1167px;
+  object-fit: cover;
+  position: absolute;
+  top: 342px;
+  width: 161px;
+}
+
+.editar-perfil-de .text-wrapper-10 {
+  color: #030027;
+  font-family: "Roboto", Helvetica;
+  font-size: 20px;
+  font-weight: 600;
+  left: 1156px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
   text-align: center;
-  color: white;
-  transform: translateX(-50%);
-  height: 21px;
-  top: 98px;
+  top: 556px;
+  white-space: nowrap;
+}
+
+/* Footer section */
+.editar-perfil-de .rectangle {
+  height: 209px;
+  left: 1px;
+  position: absolute;
+  top: 880px;
+  width: 1500px;
+}
+
+.editar-perfil-de .copyright {
+  color: #ffffff;
+  font-family: "Inter", Helvetica;
+  font-size: 20px;
+  font-weight: 400;
+  left: 378px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-align: center;
+  top: 977px;
+  white-space: nowrap;
   width: 752px;
 }
 
-.footer-bold {
+.editar-perfil-de .span {
+  color: #ffffff;
+  font-family: "Inter", Helvetica;
+  font-size: 20px;
+  font-weight: 400;
+  letter-spacing: 0;
+}
+
+.editar-perfil-de .text-wrapper-11 {
   font-weight: 700;
 }
 
-/* Responsive Design */
-@media (max-width: 768px) {
-  .header {
-    padding: 0 1.25rem;
-    height: 120px;
-  }
-
-  .header-logo {
-    height: 120px;
-    width: 120px;
-  }
-
-  .header-icons {
-    gap: 0.625rem;
-  }
-
-  .main-content {
-    flex-direction: column;
-  }
-
-  .form-section {
-    padding: 1.5rem 2.5rem 0 2.5rem;
-  }
-
-  .form-container {
-    width: 100%;
-  }
-
-  .form-row {
-    flex-direction: column;
-    gap: 1.5rem;
-    margin-bottom: 2rem;
-  }
-
-  .sidebar {
-    margin-top: 2.5rem;
-    width: 100%;
-    order: -1;
-    height: 400px;
-  }
-
-  .sidebar-plate {
-    left: 0;
-    width: 100%;
-    height: 400px;
-  }
-
-  .profile-section {
-    left: 50%;
-    transform: translateX(-50%);
-    top: 50px;
-  }
+/* Header rectangle */
+.editar-perfil-de .rectangle-2 {
+  background-color: #f5f5f5;
+  box-shadow: 0px 4px 10px #00000026;
+  height: 166px;
+  left: 1px;
+  position: absolute;
+  top: 0;
+  width: 1500px;
 }
 
-@media (max-width: 640px) {
-  .header {
-    padding: 0 1rem;
-    height: 120px;
-  }
+.editar-perfil-de .image-2 {
+  height: 172px;
+  left: 134px;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  width: 177px;
+}
 
-  .form-section {
-    padding: 1rem 1.25rem 0 1.25rem;
-  }
+/* Menu and vector icons */
+.editar-perfil-de .menu-2 {
+  height: 53px;
+  left: 1340px;
+  position: absolute;
+  top: 56px;
+  width: 46px;
+}
 
-  .page-title {
-    margin-bottom: 2.5rem;
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
+.editar-perfil-de .vector-wrapper {
+  height: 47px;
+  left: 1286px;
+  position: absolute;
+  top: 59px;
+  width: 47px;
+}
 
-  .field-label {
-    font-size: 1rem;
-    line-height: 1.5rem;
-  }
+.editar-perfil-de .vector-2 {
+  height: 31px;
+  left: 8px;
+  position: absolute;
+  top: 8px;
+  width: 31px;
+}
 
-  .form-input {
-    padding: 0 1rem;
-    height: 48px;
-    font-size: 1rem;
-    line-height: 1.5rem;
-  }
+/* Save button */
+.editar-perfil-de .overlap-7 {
+  border-radius: 1000px;
+  height: 60px;
+  left: 449px;
+  position: absolute;
+  top: 710px;
+  width: 326px;
+}
 
-  .save-button-container {
-    margin: 4rem 0 2.5rem 0;
-  }
+.editar-perfil-de .rectangle-3 {
+  background-color: #ee5c08;
+  border-radius: var(--shape-corner-full);
+  height: 60px;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 326px;
+}
 
-  .save-button {
-    height: 50px;
-    width: 280px;
-  }
+.editar-perfil-de .text-wrapper-12 {
+  color: #ffffff;
+  font-family: "Roboto", Helvetica;
+  font-size: 36px;
+  font-weight: 700;
+  left: 102px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 8px;
+  white-space: nowrap;
+}
 
-  .save-button-text {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
+/* Home link */
+.editar-perfil-de .text-wrapper-13 {
+  color: #000000;
+  font-family: "Inter", Helvetica;
+  font-size: 16px;
+  font-weight: 700;
+  height: 42px;
+  left: 167px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  top: 786px;
+  width: 48px;
+}
 
-  .back-text {
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-  }
-
-  .sidebar {
-    margin-top: 1.25rem;
-    height: 300px;
-  }
-
-  .sidebar-plate {
-    height: 300px;
-  }
-
-  .profile-section {
-    top: 30px;
-  }
-
-  .profile-text {
-    margin-top: 11rem;
-    font-size: 1rem;
-    line-height: 1.5rem;
-    width: 150px;
-  }
-
-  .footer-text {
-    left: 50%;
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-    transform: translateX(-50%);
-    width: 90%;
-  }
+.editar-perfil-de .frame-2 {
+  height: 24px;
+  left: 137px;
+  position: absolute;
+  top: 796px;
+  width: 24px;
 }
